--- a/package.json
+++ b/package.json
@@ -6,10 +6,21 @@
   "scripts": {
     "start": "node server.js"
   },
+  
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "openai": "^4.0.0",
     "dotenv": "^16.0.3"
+  },
+  
+  {
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "openai": "^4.0.0",
+    "dotenv": "^16.0.3",
+    "googleapis": "^126.0.1"
   }
+}
 }
