--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "life-tracker-backend",
   "version": "1.0.0",
-  "description": "Backend for Life Tracker AI Coach",
-  "main": "server.js",
+  "description": "Life Tracker AI Backend",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "openai": "^4.0.0",
+    "googleapis": "^118.0.0",
     "dotenv": "^16.0.3",
-    "googleapis": "^126.0.1"
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
