--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-OPENAI_API_KEY=aa
+OPENAI_API_KEY=your-openai-api-key
+GOOGLE_CREDENTIALS=your-google-credentials-json
+JWT_SECRET=your-super-secret-jwt-key
+PORT=3000
