--- a/.env
+++ b/.env
@@ -1,4 +1,15 @@
-OPENAI_API_KEY=your-openai-api-key
-GOOGLE_CREDENTIALS=your-google-credentials-json
-JWT_SECRET=your-super-secret-jwt-key
+# OpenAI Configuration
+OPENAI_API_KEY=your-openai-api-key-here
+
+# Google Docs Configuration
+GOOGLE_CREDENTIALS={"type":"service_account","project_id":"your-project","private_key_id":"...","private_key":"...","client_email":"...","client_id":"...","auth_uri":"...","token_uri":"...","auth_provider_x509_cert_url":"...","client_x509_cert_url":"..."}
+
+# MongoDB Configuration
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/lifetracker?retryWrites=true&w=majority
+
+# Authentication
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+
+# Server Configuration
 PORT=3000
+NODE_ENV=production
